Fix stepper layout issues - content will now scroll

--- a/src/frontend/app/features/applications/deploy-application/deploy-application-step3/deploy-application-step3.component.scss
+++ b/src/frontend/app/features/applications/deploy-application/deploy-application-step3/deploy-application-step3.component.scss
@@ -5,6 +5,7 @@
 
 .deploy-app {
   display: flex;
+  height: 43px;
   padding: 12px;
   width: 100%;
   &__title {
@@ -14,4 +15,9 @@
   &__spinner {
     flex: 0;
   }
+  &__log {
+    display: flex;
+    height: calc(100% - 43px);
+  }
 }
+
